cluster/talos/apps/servarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: servarr
  labels:
    goldilocks.fairwinds.com/enabled: "true"
