cluster/talos/apps/servarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: servarr
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: servarr-jellyfin
      port:
        number: 8096
  tls:
  - hosts:
    - jellyfin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: servarr
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: servarr-sonarr
      port:
        number: 80
  tls:
  - hosts:
    - sonarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: servarr
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: servarr-qbittorrent-web
      port:
        number: 8080
  tls:
  - hosts:
    - qbittorrent
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: servarr
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: servarr-prowlarr
      port:
        number: 9696
  tls:
  - hosts:
    - prowlarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr-ingress
  namespace: servarr
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: servarr-flaresolverr
      port:
        number: 8191
  tls:
  - hosts:
    - flaresolverr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-ingress
  namespace: servarr
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: servarr-jellyseerr
      port:
        number: 5055
  tls:
  - hosts:
    - jellyseerr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ingress
  namespace: servarr
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: servarr-bazarr
      port:
        number: 6767
  tls:
  - hosts:
    - bazarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: servarr
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: servarr-radarr
      port:
        number: 7878
  tls:
  - hosts:
    - radarr
